syntax = "proto3";

package book;

import "google/protobuf/empty.proto";
import "proto/user.proto";

service BookController {
    rpc UserBook(proto.user.User) returns (stream Book) {}
    rpc List(BookListRequest) returns (stream Book) {}
    rpc Create(Book) returns (Book) {}
    rpc Retrieve(BookRetrieveRequest) returns (Book) {}
    rpc Update(Book) returns (Book) {}
    rpc Destroy(Book) returns (google.protobuf.Empty) {}
}

message Book {
    int64 id = 1;
    string name = 2;
    int64 user = 3;
}

message BookListRequest {
}

message BookRetrieveRequest {
    int64 id = 1;
}
