syntax = "proto3";

package book;

import "google/protobuf/empty.proto";
//import "user.proto";
////import "proto/user.proto";

service BookController {
  rpc UserBookList(ID) returns (UserBooksResponse){}
  rpc List(BookListRequest) returns (stream Book) {}
  rpc Create(Book) returns (Book) {}
  rpc Retrieve(BookRetrieveRequest) returns (Book) {}
  rpc Update(Book) returns (Book) {}
  rpc Destroy(Book) returns (google.protobuf.Empty) {}
}

message UserBooksResponse{
  repeated Book book = 1;
}

message Book {
  int64 id = 1;
  string name = 2;
  int64 user = 3;
}
message ID{
  int64 id = 1;
  string token = 2;
}
message BookListRequest {
}

message BookRetrieveRequest {
  int64 id = 1;
}
